Sponsors now reside side-by-side instead of per tier

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,14 +1,10 @@
 <div class="sponsors reveal">
-	<div class="plat-sponsors">
-		<a href="http://martellotech.com/" target="_blank">
-			<img src="/assets/images/sponsors/martellotechlogo.png" class="sponsor-big"></img>
-		</a>
-	</div>
-	<div class="bronze-sponsors">
-		<a href="http://magmic.com/" target="_blank">
-			<img src="/assets/images/sponsors/magmic.png" class="sponsor-bronze"></img>
-		</a>
-	</div>
+  <a href="http://martellotech.com/" target="_blank">
+    <img src="/assets/images/sponsors/martellotechlogo.png" class="sponsor-plat"></img>
+  </a>
+  <a href="http://magmic.com/" target="_blank">
+    <img src="/assets/images/sponsors/magmic.png" class="sponsor-bronze"></img>
+  </a>
 </div>
 <br><br>
 <div class="reveal">
