--- a/_sass/sponsors.scss
+++ b/_sass/sponsors.scss
@@ -6,18 +6,17 @@
 }
 .sponsors {
     padding: 50px 0;
+    img {
+      margin: 0 20px;
+    }
 }
 
-.plat-sponsors {
-	margin-bottom: 50px;
-}
-
-.sponsor-big {
+.sponsor-plat {
 	width: 32%;
 }
 
 .sponsor-bronze {
-	width: 19%;
+	width: 15%;
 }
 
 .partner {
