--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 		<title>CUHacking</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="shortcut icon" href="CUHacking.github.io/assets/images/favicon.ico" />
+		<link rel="shortcut icon" href="/assets/images/favicon.ico" />
 		<!--BOOTSTRAP-->
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.1.0/octicons.min.css">
 	    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css"></link>
+		<link rel="stylesheet" type="text/css" href="/css/main.css"></link>
 
 	    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 	    <!--JQUERY-->
