--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,8 +8,8 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="{{site.baseurl}}/">
-				<img id="navbar-logo" src="{{site.baseurl}}/assets/images/official_logo.png"></img>
+		      <a class="navbar-brand" href="/">
+				<img id="navbar-logo" src="/assets/images/official_logo.png"></img>
 		      	<h1 id="navbar-title-header">CUHacking</h1>
 		      </a>
 		    </div>
@@ -17,13 +17,13 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li id="home-nav"><a href="{{ site.baseurl }}/#home">Home<span class="sr-only">(current)</span></a></li>
+		        <li id="home-nav"><a href="/#home">Home<span class="sr-only">(current)</span></a></li>
 		        <!--li><a href="{{ site.baseurl }}/sponsor">Become a Sponsor</a></li-->
-		        <li id="about-nav"><a href="{{ site.baseurl }}/#about">About</a></li>
-			<li id="sponsor-nav"><a href="{{ site.baseurl }}/#schedule">Schedule</a></li>
-		        <li id="sponsor-nav"><a href="{{ site.baseurl }}/#sponsors">Sponsors</a></li>
-		        <li id="faq-nav"><a href="{{ site.baseurl }}/#faq">FAQ</a></li>
-		        <li id="contact-nav"><a href="{{ site.baseurl }}/#contact">Contact</a></li>
+		        <li id="about-nav"><a href="/#about">About</a></li>
+			<li id="sponsor-nav"><a href="/#schedule">Schedule</a></li>
+		        <li id="sponsor-nav"><a href="/#sponsors">Sponsors</a></li>
+		        <li id="faq-nav"><a href="/#faq">FAQ</a></li>
+		        <li id="contact-nav"><a href="/#contact">Contact</a></li>
 		      </ul>
 		    </div><!-- /.container-fluid -->
 		</nav>
