--- a/_includes/side_social.html
+++ b/_includes/side_social.html
@@ -1,14 +1,14 @@
 <div class="social-media-links side">
 	<a href="https://www.facebook.com/CUHacking/" target="_blank">
-		<img class="social-media-icon" src="/assets/images/ico/fbfull.png"></img>
+		<img class="social-media-icon" src="/CUHacking.github.io/assets/images/ico/fbfull.png"></img>
 	</a>
 	<!--a href="" target="_blank">
 		<img class="social-media-icon" src="/assets/images/ico/snap.png"></img>
 	</a-->
 	<a href="https://twitter.com/CuHacking" target="_blank">
-		<img class="social-media-icon" src="/assets/images/ico/twitterl.png"></img>
+		<img class="social-media-icon" src="/CUHacking.github.io/assets/images/ico/twitterl.png"></img>
 	</a>
 	<a href=" https://www.instagram.com/cuhacking/" target="_blank">
-		<img class="social-media-icon last" src="/assets/images/ico/Instafull.png"></img>
+		<img class="social-media-icon last" src="/CUHacking.github.io/assets/images/ico/Instafull.png"></img>
 	</a>
 </div>
