--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
 		        <span class="icon-bar"></span>
 		      </button>
 		      <a class="navbar-brand" href="/">
-				<img id="navbar-logo" src="/assets/images/official_logo.png"></img>
+				<img id="navbar-logo" src="/CUHacking.github.io/assets/images/official_logo.png"></img>
 		      	<h1 id="navbar-title-header">CUHacking</h1>
 		      </a>
 		    </div>
