--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 	    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-		<link rel="stylesheet" type="text/css" href="/assets/css/main.css"></link>
+		<link rel="stylesheet" type="text/css" href="/CUHacking.github.io/assets/css/main.css"></link>
 
 	    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 	    <!--JQUERY-->
