--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,10 +5,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!--countdown-->
-<script src="/assets/js/jquery.countdown.min.js"></script>
+<script src="/CUHacking.github.io/assets/js/jquery.countdown.min.js"></script>
 
 <!--FAQ-->
-<script src="/assets/js/faq.js"></script>
+<script src="/CUHacking.github.io/assets/js/faq.js"></script>
 
 <!--Scroll loading-->
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
