--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,4 +71,4 @@ layout: main_template
 <!--Particle js-->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <!--Particle js-->
-<script src="{{ site.baseurl }}/assets/js/particles_settings.js"></script>
+<script src="/assets/js/particles_settings.js"></script>
