--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: main_template
 
 {% include particle_bg.html %}
 <div id="home">
-	<img id="logo" class="reveal-full-size" src="{{ site.baseurl }}/assets/images/official_logo.png"></img>
+	<img id="logo" class="reveal-full-size" src="/assets/images/official_logo.png"></img>
 
 	<h4 class="reveal-full-size location"><span>
 		<label style="color:#eee;height: 28px;">MARCH 31<sup style="margin-left:2px; color:#eee;">st</sup> - APRIL 1<sup style="color:#eee;">st</sup> 2018</label>
@@ -71,4 +71,4 @@ layout: main_template
 <!--Particle js-->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <!--Particle js-->
-<script src="/assets/js/particles_settings.js"></script>
+<script src="/CUHacking.github.io/assets/js/particles_settings.js"></script>
